kubernetes/apps/default/unifi/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
    - "unifi.${cluster_domain}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authelia-forwardauth
      backendRefs:
        - name: unifi-ui
          port: 8081
